Modificacao do footer removendo alguns textos inúteis, modificacão do header resolvendo uma div adiconada que estava a sobrepor os icons e melhora no gap do conteiner 2 para mobile, aumento do tempo da entrada do sticky no header from 0 to 390

--- a/display.css
+++ b/display.css
@@ -15,6 +15,9 @@
   #nss:hover {
     padding: 0;
   }
+  #container2{
+    gap: 1rem;
+  }
 }
 @media (max-width: 580px){
   header{
